--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "start": "node server/index.js",
     "start-dev": "nodemon server/index.js",
+    "start-dev-debug": "nodemon --inspect server/index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -18,16 +19,22 @@
     "url": "https://github.com/dineshkumarl/VBI/issues"
   },
   "homepage": "https://github.com/dineshkumarl/VBI#readme",
-  "devDependencies": {
+  "engines": {
+    "node": "14.x"
+  },
+  "dependencies": {
     "body-parser": "^1.19.0",
     "cookie-parser": "^1.4.5",
-    "cross-env": "^7.0.3",
-    "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "express-graphql": "^0.12.0",
+    "express-session": "^1.17.1",
     "graphql": "^15.5.0",
     "lodash.get": "^4.4.2",
-    "mongoose": "^5.12.2",
+    "dotenv": "^8.2.0",
+    "mongoose": "^5.12.2"
+  },
+  "devDependencies": {
+    "cross-env": "^7.0.3",
     "nodemon": "^2.0.7"
   }
 }
