--- a/package.json
+++ b/package.json
@@ -25,13 +25,14 @@
   "dependencies": {
     "body-parser": "^1.19.0",
     "cookie-parser": "^1.4.5",
+    "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "express-graphql": "^0.12.0",
     "express-session": "^1.17.1",
     "graphql": "^15.5.0",
     "lodash.get": "^4.4.2",
-    "dotenv": "^8.2.0",
-    "mongoose": "^5.12.2"
+    "mongoose": "^5.12.2",
+    "react-router-dom": "^5.2.0"
   },
   "devDependencies": {
     "cross-env": "^7.0.3",
