--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "node": "14.x"
   },
   "dependencies": {
+    "@chakra-ui/icons": "^1.0.8",
     "body-parser": "^1.19.0",
     "cookie-parser": "^1.4.5",
     "dotenv": "^8.2.0",
