--- a/client/package.json
+++ b/client/package.json
@@ -11,6 +11,7 @@
     "@testing-library/react": "^11.2.5",
     "@testing-library/user-event": "^12.8.3",
     "axios": "^0.21.1",
+    "dayjs": "^1.10.4",
     "formik": "^2.2.6",
     "framer-motion": "^4.0.3",
     "gql-query-builder": "^3.5.5",
