--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "build": "cd client && npm run build && cd ..",
     "start": "node server/index.js",
-    "start-dev": "npm run build && nodemon server/index.js",
+    "start-dev": "nodemon server/index.js",
     "start-dev-debug": "nodemon --inspect server/index.js",
     "cypress":"./node_modules/.bin/cypress open",
     "test": "echo \"Error: no test specified\" && exit 1"
