--- a/package.json
+++ b/package.json
@@ -9,8 +9,9 @@
     "start-test": "npm run build && node -r dotenv/config server/index.js dotenv_config_path=test.env",
     "start-dev": "nodemon -r dotenv/config server/index.js",
     "start-dev-debug": "nodemon -r dotenv/config --inspect server/index.js",
-    "cy:ui": "./node_modules/.bin/cypress open",
-    "cy:run": "./node_modules/.bin/cypress run -- --record --spec ./cypress/integration/vbi/**/*_spec.js",
+    "cy:dataseed":"node -r dotenv/config scripts/seeding/index.js dotenv_config_path=test.env",
+    "cy:ui": "npm run cy:dataseed && cypress open",
+    "cy:run": "npm run cy:dataseed && cypress run --browser edge -- --record --spec ./cypress/integration/vbi/**/*_spec.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
