--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "node": "14.x"
   },
   "dependencies": {
+    "bcrypt": "^5.0.1",
     "body-parser": "^1.19.0",
     "cookie-parser": "^1.4.5",
     "dotenv": "^8.2.0",
