--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "prebuild":"cd client && npm i && cd ..",
     "build": "cd client && npm run build && cd ..",
-    "start": "npm run build && node -r dotenv/config server/index.js",
+    "start": "node -r dotenv/config server/index.js",
     "start-test": "npm run build && node -r dotenv/config server/index.js dotenv_config_path=test.env",
     "start-dev": "nodemon -r dotenv/config server/index.js",
     "start-dev-debug": "nodemon -r dotenv/config --inspect server/index.js",
